[package]
name = "token-generators-shared"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "*"
prost-types = "*"
hex = "*"
encryption = { git = "https://github.com/ReachPay/encryption.git", tag = "0.1.1" }
rust-extensions = { tag = "0.1.2", git = "https://github.com/MyJetTools/rust-extensions.git" }
