[package]
name = "token-generators-shared"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "*"
prost-types = "*"
hex = "*"
encryption = { tag = "0.1.1", git = "https://github.com/ReachPay/encryption.git" }
rust-extensions = { tag = "0.1.4", git = "https://github.com/MyJetTools/rust-extensions.git" }
